app/fireeth_k8s/lighthouse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lighthouse-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lighthouse
  ports:
    - name: p2p-tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: p2p-udp
      port: 9000
      protocol: UDP
      targetPort: 9000
